--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "main": "./lib/index.js",
   "dependencies": {
+    "commander": "^2.9.0",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
   },
